<resources>
    <!--App-->
    <string name="app_name">RoomJetpackCompose</string>
    <string name="db_name">books_db</string>
    <!--Screen Titles-->
    <string name="book_list_screen_title">"Book List"</string>
    <string name="book_details_screen_title">"Book Details"</string>
    <!--Texts-->
    <string name="empty_book_list_text">"The book list is empty."</string>
    <string name="insert_book">"Insert book"</string>
    <!--Buttons-->
    <string name="insert_button">"Insert"</string>
    <string name="update_button">"Update"</string>
    <string name="cancel_button">"Cancel"</string>
    <!--Icons-->
    <string name="edit_icon">"Edit"</string>
    <string name="delete_icon">Delete</string>
    <!--Content Descriptions-->
    <string name="open_insert_book_dialog">"Open insert book dialog."</string>
    <string name="navigate_back">Navigate back</string>
    <!--Placeholders-->
    <string name="book_title">"Type a book title…"</string>
    <string name="book_author">"Type a book author…"</string>
    <!--Messages-->
    <string name="empty_book_field_message">"Book %1$s cannot be empty."</string>
    <string name="no_book_updates_message">"No book updates performed."</string>
    <string name="book_action_message">"Book successfully %1$s."</string>
    <!--Testing-->
    <string name="title_test">"Title Test"</string>
    <string name="author_test">"Author Test"</string>
    <string name="new_title_test">"New Title Test"</string>
</resources>